demo/html-k8s-deployment/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html-k8s-deployment
  labels:
    app: html-k8s
spec:
  replicas: 3
  selector:
    matchLabels:
      app: html-k8s
  template:
    metadata:
      labels:
        app: html-k8s
    spec:
      containers:
      - name: html-k8s-container
        image: your-docker-image:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: html-configmap
