demo/html-k8s-deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-k8s-service
  labels:
    app: html-k8s-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  selector:
    app: html-k8s-app
